Some more awkward spacing fix (mobile)

--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ hr {
   background: #d03A0f;
 }
 .column-title {
-  margin-top: 0;
+  margin-top: 15px;
   padding-bottom: 15px;
   border-bottom: 1px solid #eee;
   margin-bottom: 15px;
